# altair

./: Cargo.toml  README.md  crun.yaml
src/: config.rs  lib.rs  main.rs
src/commands/: start.rs
src/utils/: mod.rs  read_config.rs  run_command.rs
