[package]
name = "altair"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "altair"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "process", "signal", "io-util"] }
tokio-util = { version = "0.7.14", features = ["rt"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
shellwords = "1.1.0"