[package]
name = "altairsh"
version = "1.0.2"
edition = "2024"
authors = ["dcdms <dcdmsx@gmail.com>"]
description = "A simple Rust script to run multiple commands at the same time."
repository = "https://github.com/dcdms/altair"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["cli"]

[[bin]]
name = "altair"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "process", "signal", "io-util"] }
tokio-util = { version = "0.7.14", features = ["rt"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
shellwords = "1.1.0"
clap = { version = "4.5.35", features = ["derive"] }
anyhow = "1.0.97"